--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,18 +1,97 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: var(--primary-color);
+  font-family: 'Helvetica Neue';
+  background: var(--primary-color);
 }
 
 :root {
-    --primary-color: #ffffff;
-    --secondary-color: #4A63E7;
-    --accent-color: #FF5958;
-    --white: #FFFFFF;
-    --black: #000000;
-    --grey: #F2F2F2;
+  --primary-color: #ffffff;
+  --secondary-color: #4a63e7;
+  --accent-color: #ff5958;
+  --white: #ffffff;
+  --black: #000000;
+  --grey: #f2f2f2;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: column;
+  width: 13rem;
+  height: 35rem;
+  background: var(--secondary-color);
+  position: fixed;
+  border-radius: 15px;
+  padding: 2rem;
+  color: var(--white);
+}
+
+.nav-title p {
+  font-size: small;
+}
+
+.nav-menu {
+  margin-top: 3rem;
+}
+
+.nav-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 20rem;
+}
+
+.nav-links li {
+  margin: 1rem 0;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: var(--white);
+  font-size: medium;
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  margin-right: 1rem;
+}
+
+.social {
+  list-style: none;
+  padding: 0px;
+  margin: 0px 0px 2rem 0px;
+  display: flex;
+  flex-direction: row;
+}
+
+.social li {
+  background: var(--accent-color);
+  margin-right: 15px;
+  padding: 5px;
+  border-radius: 50%;
+  width: 1.5rem;
+  height: 1.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-image {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
 }
