--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: 'Helvetica Neue';
+  font-family: 'Montserrat';
   background: var(--primary-color);
 }
 
 :root {
-  --primary-color: #ffffff;
+  --primary-color: #F6F7FE;
   --secondary-color: #4a63e7;
   --accent-color: #ff5958;
   --white: #ffffff;
@@ -22,8 +24,8 @@ body {
   flex-direction: row;
   margin-top: 5rem;
   width: 100vw;
-  height: 100vh;
   justify-content: center;
+  position: relative;
 }
 
 /********** NAVIGATION SIDEBAR START **********/
@@ -36,6 +38,14 @@ body {
   border-radius: 15px;
   padding: 2rem;
   color: var(--white);
+  position: fixed;
+  left: 17rem;
+}
+
+
+.content {
+    position: relative;
+    left: 7rem;
 }
 
 .nav-title p {
@@ -90,51 +100,50 @@ body {
 }
 
 .nav-image {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 /********** NAVIGATION SIDEBAR END **********/
 
 /*** WELCOME CARD START ****/
 .welcome-wrapper {
-    background-image: url(../images/welcomebg.jpeg);
-    background-size: cover;
-    margin-left: 2rem;
-    border-radius: 15px;
+  background-image: url(../images/welcomebg.jpeg);
+  background-size: cover;
+  margin-left: 2rem;
+  border-radius: 15px;
 }
 
 .welcome {
-    color: var(--white);
-    background: var(--secondary-color);
-    opacity: 0.8;
+  color: var(--white);
+  background: var(--secondary-color);
+  opacity: 0.8;
 }
 
 .welcome h1 {
-    font-size: 3rem;
-    margin: 1rem 0;
+  font-size: 3rem;
+  margin: 1rem 0;
 }
 
 /*** WELCOME CARD END ****/
 
 /*** ABOUT CARD START ****/
 .info {
-    display: flex;
-    flex-direction: row;
-    margin-top: 5rem;
+  display: flex;
+  flex-direction: row;
+  margin-top: 5rem;
 }
 
 .about-image {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 /*** ABOUT CARD END ****/
-
-.card {
+.cardx {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -143,47 +152,147 @@ body {
     border-radius: 15px;
     padding: 2rem;
     line-height: 1.5;
+    margin-bottom: 2rem;
+
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50rem;
+  height: 35rem;
+  border-radius: 15px;
+  padding: 2rem;
+  line-height: 1.5;
+  margin-bottom: 2rem;
+  background: var(--white);
 }
 
 .shadow {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .cta {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .btn {
-    background: var(--accent-color);
-    color: var(--white);
-    padding: 1rem 1rem;
-    border-radius: 20px;
-    text-decoration: none;
+  background: var(--accent-color);
+  color: var(--white);
+  padding: 1rem 1rem;
+  border-radius: 20px;
+  text-decoration: none;
 }
 
 .btn-accent {
-    color: var(--white);
-    padding: 1rem 1rem;
-    border-radius: 20px;
-    text-decoration: none;
-    border: solid 1px var(--white);
+  color: var(--white);
+  padding: 1rem 1rem;
+  border-radius: 20px;
+  text-decoration: none;
+  border: solid 1px var(--white);
 }
 
-.about-card {
-    margin-left: 2rem;
-    margin-top: 2rem;
+.dashoff {
+  margin-left: 2rem;
 }
 
 .underscore {
-    border: solid 3px var(--accent-color);
-    width: 2rem;
-    border-radius: 10px;
+  border: solid 3px var(--accent-color);
+  width: 2rem;
+  border-radius: 10px;
+  margin-bottom: 2rem;
 }
 
 .details {
-    margin: 1rem;
+  margin: 1rem;
 }
 
 .details > p {
+  color: var(--grey);
+}
+
+.further-details {
+  margin: 20px auto;
+  background-color: #fff;
+  display: grid;
+  grid-template-columns: 20rem 20rem;
+  grid-row: auto auto;
+  grid-row-gap: 20px;
+}
+.further-details > div {
+  display: flex;
+  align-items: center;
+  color: var(--grey);
+}
+
+.further-details > div > span {
+  color: black;
+  margin-right: 0.5rem;
+  font-weight: bold;
+}
+
+.skill {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0.1rem;
+}
+
+.skill-icon {
+    margin: 0.5rem;
+}
+
+.service-box {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+}
+
+.service-box li {
+    margin: 0.5rem;
+    border: solid 0.5px #D8D8D8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    border-radius: 10px;
+}
+
+.service-box li:hover {
+    background: var(--accent-color);
+    color: var(--white);
+    cursor: pointer;
+}
+
+.service-box li:hover .service-icon {
+    color: var(--white);
+}
+
+.service-box li:hover .service-description {
+    color: var(--white);
+}
+
+.service-name {
+    margin-top: 0.5rem;
+    font-weight: 800;
+    font-size: large;
+    text-align: center;
+    padding: 0.1rem;
+}
+
+.service-description {
+    font-size: small;
     color: var(--grey);
 }
+
+.service-icon {
+    font-size: 1.5rem;
+    color: var(--accent-color);
+}
+
+/*** CONTACT CARD START ****/
