--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -17,6 +17,7 @@ body {
   --white: #ffffff;
   --black: #000000;
   --grey: #808080;
+  --greyout: #d8d8d8;
 }
 
 .container {
@@ -262,7 +263,7 @@ body {
 
 .service-box li {
   margin: 0.5rem;
-  border: solid 0.5px #d8d8d8;
+  border: solid 0.5px var(--greyout);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -306,5 +307,53 @@ body {
 /*** CONTACT CARD START ****/
 
 .imgtest {
-    float: right;
+  float: right;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.contact-details {
+  border: solid 1px black;
+  flex: 1;
+}
+
+form {
+  flex: 3;
+  margin-left: 1rem;
+}
+
+form input[type='text'],
+form input[type='email'],
+form textarea {
+  width: 100%;
+  border: solid 1px var(--greyout);
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  padding: 0.6rem;
+  border-radius: 5px;
+  margin-bottom: 0.6rem;
+  font-size: 0.9rem;
+  margin-left: 5px;
+}
+
+form input[type='text']:focus,
+form input[type='email']:focus,
+form textarea:focus {
+  outline: none;
+  border: solid 1px var(--accent-color);
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
 }
