--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -30,6 +30,10 @@ body {
 }
 
 /********** NAVIGATION SIDEBAR START **********/
+.closeMenu {
+  display: none;
+}
+
 .navigation {
   display: flex;
   flex-direction: column;
@@ -434,111 +438,6 @@ form i {
 
 /** General CSS end ***/
 
-@media screen and (max-width: 768px) {
-  .navigation {
-    display: none;
-  }
-
-  .welcome-wrapper {
-    background-image: url(../images/welcomebg.jpeg);
-    background-size: cover;
-    margin-left: 0;
-    border-radius: 0px;
-    width: 100%;
-  }
-
-  .welcome {
-    color: var(--white);
-    background: var(--secondary-color);
-    opacity: 0.9;
-    width: 100%;
-  }
-  
-  .cardx {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    min-height: 35rem;
-    height: auto;
-    border-radius: 0px;
-    line-height: 1.5;
-    margin-bottom: 2rem;
-    padding: 0;
-  }
-
-  .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    min-height: 35rem;
-    border-radius: 0px;
-    line-height: 1.5;
-    margin-bottom: 2rem;
-    background: var(--white);
-    height: auto;
-    padding: 0;
-  }
-
-  .further-details {
-    margin: 0px;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .service-box {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-  }
-
-  .cta {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-  }
-
-  .cta > a {
-    margin-top: 1rem;
-  }
-
-  .dashoff {
-    margin-left: 0;
-  }
-
-  .form-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 1rem;
-  }
-
-  .contact-details {
-    flex: 0;
-  }
-
-  form {
-    flex: 0;
-    margin: 0;
-  }
-
-  .container {
-    display: block;
-    margin-top: 0;
-    width: 100%;
-    justify-content: center;
-    position: relative;
-  }
-
-  /*** ABOUT CARD START ****/
-  .info {
-    display: block;
-    margin-top: 0;
-  }
-  /*** ABOUT CARD END ****/
+.menubtn {
+  display: none;
 }
