Add javascript events to list elements

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -140,6 +140,10 @@ body {
   margin-top: 2rem;
 }
 
+.welcomemsg {
+  padding: 1rem;
+}
+
 .btn {
   background: var(--accent-color);
   color: var(--white);
