--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -26,6 +26,23 @@
   padding: 0;
 }
 
+.card > h2 {
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
+.underscore {
+  margin-left: 1rem;
+}
+
+.about-image {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-left: 0.6rem;
+}
+
 .card {
   display: flex;
   flex-direction: column;
@@ -123,7 +140,7 @@ form {
 }
 
 .closeMenu > i {
-    font-size: 2.5rem;
+  font-size: 2.5rem;
 }
 
 /********** NAVIGATION SIDEBAR START **********/
