--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -307,7 +307,7 @@ body {
   flex-direction: column;
   justify-content: center;
   width: 60vw;
-  height: 35rem;
+  min-height: 35rem;
   padding: 2rem;
   line-height: 1.5;
   margin-bottom: 2rem;
@@ -318,7 +318,7 @@ body {
   flex-direction: column;
   justify-content: center;
   width: 60vw;
-  height: 35rem;
+  min-height: 35rem;
   padding: 2rem;
   line-height: 1.5;
   margin-bottom: 2rem;
