--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -14,6 +14,18 @@ body {
   margin-bottom: 2rem;
 }
 
+.progress-bar {
+  border: solid 1px var(--greyout);
+  width: 80%;
+  height: 0.5rem;
+  border-radius: 3px;
+}
+
+.bar-indicator {
+  height: 0.5rem;
+  background: var(--black);
+}
+
 :root {
   --primary-color: #f6f7fe;
   --secondary-color: #1e2125;
