--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -233,8 +233,6 @@ body {
   grid-row-gap: 20px;
 }
 .further-details > div {
-  display: flex;
-  align-items: center;
   color: var(--grey);
 }
 
@@ -246,8 +244,8 @@ body {
 
 .skill {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  float: left;
   margin: 0.1rem;
 }
 
